rollback to vulnerable dependency while new version is not stable
Signed-off-by: MinoUni <maks.reva.ua@gmail.com>