@@ -17,6 +17,10 @@
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
+		<argLine>
+			-Xshare:off
+			-XX:+EnableDynamicAgentLoading
+		</argLine>
 		<java.version>21</java.version>
 		<maven.compiler.source>21</maven.compiler.source>
 		<maven.compiler.target>21</maven.compiler.target>
@@ -44,8 +48,13 @@
 			</dependency>
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
+				<artifactId>logback-classic</artifactId>
+				<version>1.5.12</version>
+			</dependency>
+			<dependency>
+				<groupId>ch.qos.logback</groupId>
 				<artifactId>logback-core</artifactId>
-				<version>1.5.15</version>
+				<version>1.5.12</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -228,7 +237,6 @@
 				<configuration>
 					<argLine>
 						-javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar
-						-Xshare:off
 					</argLine>
 				</configuration>
 			</plugin>
